# Dirichlet_problem_cuda

./: CMakeLists.txt  cuda_mesh.cu  cuda_mesh.cuh  iter.cu  iter.cuh  main_par.cu  mat.h  mesh.cpp  mesh.h
